--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Do.Done - Minimalist Todo App" />
+    <meta name="description" content="Done - Minimalist Todo App" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Do.Done" />
-    <title>Do.Done</title>
+    <meta name="apple-mobile-web-app-title" content="Done" />
+    <title>Done</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
