--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
         <!-- Floating Input Bar -->
         <div class="minimal-input-container" id="inputContainer">
-            <input type="text" id="taskInput" placeholder="Type a task..." autocomplete="off">
+            <input type="text" id="taskInput" placeholder="Type a task..." autocomplete="off" inputmode="search"
+                enterkeyhint="go">
             <div class="priority-toggle" id="priorityToggle"></div>
         </div>
 
