Enhance Input UI: Remove priority dot, add submit arrow, clean up layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
         <div class="minimal-input-container" id="inputContainer">
             <input type="text" id="taskInput" placeholder="Type a task..." autocomplete="off" inputmode="search"
                 enterkeyhint="go">
-            <div class="priority-toggle" id="priorityToggle"></div>
+            <button id="submitBtn" class="submit-arrow">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round"
+                    stroke-linejoin="round">
+                    <line x1="12" y1="5" x2="12" y2="19"></line>
+                    <polyline points="19 12 12 5 5 12"></polyline>
+                </svg>
+            </button>
         </div>
 
         <!-- Bottom Action Button -->
