Revert: Undid last 4 navigation attempts to restore stable state

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <!-- Bottom Navigation -->
         <nav class="bottom-nav" id="bottomNav">
             <div class="nav-track" id="navTrack">
-                <button class="nav-item" data-mode="1" id="navInsights">
+                <button class="nav-item" data-mode="1" id="navInsights" onclick="app.setMode(1)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M12 20V10M18 20V4M6 20v-6" />
                     </svg>
                 </button>
-                <button class="nav-item active" data-mode="0" id="navTasks">
+                <button class="nav-item active" data-mode="0" id="navTasks" onclick="app.setMode(0)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
                         <path d="M5 12l5 5L20 7" />
                     </svg>
                 </button>
-                <button class="nav-item" data-mode="2" id="navSettings">
+                <button class="nav-item" data-mode="2" id="navSettings" onclick="app.setMode(2)">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="3" />
                         <path
