--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     </svg>
                 </button>
             </div>
+            <div id="navIndicator" class="nav-indicator"></div>
         </nav>
     </div>
     <script src="app.js"></script>
