Fix iPhone PWA fullscreen, keyboard bar, theme, and nav

--- a/index.html
+++ b/index.html
@@ -48,26 +48,11 @@
 
         <!-- Bottom Navigation -->
         <nav class="bottom-nav" id="bottomNav">
-            <div class="nav-track" id="navTrack">
-                <button class="nav-item" data-mode="1" id="navInsights" onclick="app.setMode(1)">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 20V10M18 20V4M6 20v-6" />
-                    </svg>
-                </button>
-                <button class="nav-item active" data-mode="0" id="navTasks" onclick="app.setMode(0)">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3">
-                        <path d="M5 12l5 5L20 7" />
-                    </svg>
-                </button>
-                <button class="nav-item" data-mode="2" id="navSettings" onclick="app.setMode(2)">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="12" r="3" />
-                        <path
-                            d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z" />
-                    </svg>
-                </button>
-            </div>
-            <div id="navIndicator" class="nav-indicator"></div>
+            <button class="nav-main-btn" id="navMainBtn" aria-label="Open menu" onclick="app.handleNavTap()">
+                <span class="nav-main-icon" id="navMainIcon"></span>
+                <span class="nav-main-label" id="navMainLabel"></span>
+            </button>
+            <span class="nav-swipe-hint">Swipe to switch</span>
         </nav>
     </div>
     <script src="app.js"></script>
